--- a/NurseryPolije/app/src/main/res/layout/layout_lupass.xml
+++ b/NurseryPolije/app/src/main/res/layout/layout_lupass.xml
@@ -9,14 +9,17 @@
     android:layout_marginTop="@dimen/loginViewsMargin"
     android:layout_marginBottom="@dimen/loginViewsMargin"
     android:background="@color/whiteCardColor">
+
     <LinearLayout
         style="@style/linearParent"
+        android:layout_height="366dp"
         android:layout_gravity="center"
         android:padding="@dimen/loginViewsMargin">
+
         <TextView
             style="@style/headerTextPrimary"
-            android:text="@string/lupa_password"
-            android:layout_marginTop="@dimen/loginViewsMargin"/>
+            android:layout_marginTop="@dimen/loginViewsMargin"
+            android:text="@string/lupa_password" />
 
         <EditText
             android:id="@+id/email"
@@ -25,40 +28,39 @@
             android:hint="@string/login_email_hint"
             android:inputType="text"
             android:maxLines="1" />
+
         <EditText
             android:id="@+id/passlm"
             style="@style/modifiedEditText"
             android:hint="@string/masukkan_password_baru"
-            android:maxLines="1"
-            android:inputType="text"/>
+            android:inputType="text"
+            android:maxLines="1" />
+
         <EditText
             android:id="@+id/konfpass"
             style="@style/modifiedEditText"
             android:hint="@string/konfirmasi_password"
-            android:maxLines="1"
-            android:inputType="text"/>
+            android:inputType="text"
+            android:maxLines="1" />
+
         <TextView
-            style="@style/viewParent"
             android:id="@+id/pesan"
+            style="@style/viewParent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
             android:text=""
             android:textColor="@android:color/holo_red_dark"
-            android:textSize="@dimen/newsMoreTextSize"
-            android:layout_gravity="center"
-            android:layout_marginTop="10dp"/>
+            android:textSize="@dimen/newsMoreTextSize" />
+
         <Button
             android:id="@+id/btnlogin"
             style="@style/loginButton"
+            android:layout_width="207dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/loginViewsMargin"
-            android:text="Login" />
+            android:text="Reset Password" />
 
-        <TextView
-            style="@style/parent"
-            android:id="@+id/daftar"
-            android:textAlignment="center"
-            android:textStyle="bold"
-            android:textColor="@color/primaryTextColor"
-            android:text="Belum Punya Akun? Daftar disini"
-            android:layout_marginTop="@dimen/loginViewsMargin"/>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
