--- a/NurseryPolije/app/src/main/res/layout/layout_login.xml
+++ b/NurseryPolije/app/src/main/res/layout/layout_login.xml
@@ -49,6 +49,7 @@
         <Button
             android:id="@+id/btnlogin"
             style="@style/loginButton"
+            android:background="@drawable/custombutton"
             android:text="Login"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/loginViewsMargin"/>
