--- a/NurseryPolije/app/src/main/res/layout/fragment_notifications.xml
+++ b/NurseryPolije/app/src/main/res/layout/fragment_notifications.xml
@@ -57,6 +57,7 @@
             android:textSize="14sp" />
 
         <ImageView
+            android:id="@+id/keranjang"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_alignParentRight="true"
