--- a/NurseryPolije/app/src/main/res/drawable/custombutton.xml
+++ b/NurseryPolije/app/src/main/res/drawable/custombutton.xml
@@ -3,10 +3,10 @@
     android:shape="rectangle">
 
     <gradient
-        android:startColor="@color/gradEnd"
-        android:endColor="@color/gradStart"
+        android:startColor="#00a5ff"
+        android:endColor="#00a5ff"
         android:type="linear"/>
 
-    <corners android:radius="20dp"/>
+    <corners android:radius="50dp"/>
 
 </shape>
