--- a/NurseryPolije/app/src/main/res/drawable/grad.xml
+++ b/NurseryPolije/app/src/main/res/drawable/grad.xml
@@ -4,7 +4,7 @@
 
     <gradient
         android:angle="45"
-        android:endColor="@color/gradEnd"
-        android:startColor="@color/gradStart" />
+        android:endColor="#00a5ff"
+        android:startColor="#00a5ff" />
 
 </shape>
