--- a/NurseryPolije/app/src/main/res/values/colors.xml
+++ b/NurseryPolije/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
     <color name="whiteTextColor">#fff</color>
     <color name="primaryTextColor">#00a5ff</color>
     <color name="loginBkColor">#f0f0f0</color>
-    <color name="tombol">#31a6e0</color>
+    <color name="warnatexttombol">#ffffff</color>
 
     <!--colros for card-->
     <color name="whiteCardColor">#fff</color>
