--- a/NurseryPolije/app/src/main/res/drawable/custombutton.xml
+++ b/NurseryPolije/app/src/main/res/drawable/custombutton.xml
@@ -2,11 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
 android:shape="rectangle">
 
-<gradient
-    android:startColor="#00a5ff"
-    android:endColor="#00a5ff"
-    android:type="linear"/>
-
-<corners android:radius="50dp"/>
+    <stroke android:color="#00a5ff" android:width="1dp"/>
+    <corners android:radius="10dp"/>
 
 </shape>
