--- a/NurseryPolije/app/src/main/res/values/styles.xml
+++ b/NurseryPolije/app/src/main/res/values/styles.xml
@@ -52,7 +52,7 @@
     </style>
     <style name="loginButton" parent="viewParent">
         <!--        <item name="android:background">@drawable/ic_login_bk</item>-->
-        <item name="android:textColor">@color/warnatexttombol</item>
+        <item name="android:textColor">#00a5ff</item>
         <!--        <item name="android:colorBackground">bg</item>-->
         <item name="android:textStyle">bold</item>
     </style>
