java lupa password dan perbaikan tampilan

--- a/NurseryPolije/app/src/main/res/layout/activity_lupa_password.xml
+++ b/NurseryPolije/app/src/main/res/layout/activity_lupa_password.xml
@@ -28,22 +28,27 @@
                         android:src="@drawable/ic_login_bk" />
                 </LinearLayout>
             </LinearLayout>
+
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="341dp"
+                android:layout_height="496dp"
                 android:layout_alignParentTop="true"
-                android:orientation="vertical"
+                android:layout_marginLeft="30dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="30dp"
-                android:layout_marginLeft="30dp">
+                android:orientation="vertical">
+
                 <TextView
                     style="@style/headerText"
                     android:layout_gravity="center"
-                    android:text="Nursery Polije"
-                    android:layout_marginTop="40dp"/>
-                <include
-                    layout="@layout/layout_lupass"/>
+                    android:layout_marginTop="40dp"
+                    android:text="Nursery Polije" />
+
+                <include layout="@layout/layout_lupass" />
+
             </LinearLayout>
         </RelativeLayout>
+
     </ScrollView>
+
 </RelativeLayout>
