--- a/NurseryPolije/app/src/main/res/layout/layout_login.xml
+++ b/NurseryPolije/app/src/main/res/layout/layout_login.xml
@@ -32,6 +32,7 @@
             android:maxLines="1"
             android:inputType="textPassword"/>
         <TextView
+            android:id="@+id/lupa"
             style="@style/viewParent"
             android:text="Lupa Password?"
             android:textColor="@color/primaryTextColor"
