--- a/NurseryPolije/app/src/main/res/layout/layout_lupass.xml
+++ b/NurseryPolije/app/src/main/res/layout/layout_lupass.xml
@@ -22,45 +22,50 @@
             android:text="@string/lupa_password" />
 
         <EditText
-            android:id="@+id/email"
+            android:id="@+id/emaill"
             style="@style/modifiedEditText"
-            android:layout_height="wrap_content"
             android:hint="@string/login_email_hint"
             android:inputType="text"
             android:maxLines="1" />
 
-        <EditText
-            android:id="@+id/passlm"
-            style="@style/modifiedEditText"
-            android:hint="@string/masukkan_password_baru"
-            android:inputType="text"
-            android:maxLines="1" />
-
-        <EditText
-            android:id="@+id/konfpass"
-            style="@style/modifiedEditText"
-            android:hint="@string/konfirmasi_password"
-            android:inputType="text"
-            android:maxLines="1" />
-
-        <TextView
-            android:id="@+id/pesan"
-            style="@style/viewParent"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="10dp"
-            android:text=""
-            android:textColor="@android:color/holo_red_dark"
-            android:textSize="@dimen/newsMoreTextSize" />
-
         <Button
-            android:id="@+id/btnlogin"
+            android:id="@+id/btnkirim"
             style="@style/loginButton"
-            android:layout_width="207dp"
+            android:layout_width="100dp"
+            android:background="@drawable/custombutton"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/loginViewsMargin"
-            android:text="Reset Password" />
+            android:text="Kirim" />
+        <TextView
+            style="@style/viewParent"
+            android:id="@+id/notif"
+            android:text=""
+            android:textColor="@android:color/holo_red_dark"
+            android:textSize="@dimen/newsMoreTextSize"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"/>
+
+        <TextView
+            android:id="@+id/tulisan"
+            style="@style/viewParent"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:text="anda akan menerima email untuk mengganti password."
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:textColor="@color/primaryTextColor" />
+
+        <Button
+            android:id="@+id/kembali"
+            android:background="@drawable/custombutton"
+            style="@style/loginButton"
+            android:layout_width="113dp"
+            android:layout_gravity="right"
+            android:layout_height="wrap_content"
+            android:text="Kembali" />
 
     </LinearLayout>
 </androidx.cardview.widget.CardView>
