--- a/NurseryPolije/app/src/main/res/layout/fragment_notifications.xml
+++ b/NurseryPolije/app/src/main/res/layout/fragment_notifications.xml
@@ -20,15 +20,27 @@
             android:layout_marginTop="20dp"
             android:background="@drawable/circle_border">
 
-            <ImageView
+<!--            <ImageView-->
+<!--                android:layout_width="120dp"-->
+<!--                android:layout_height="120dp"-->
+<!--                android:layout_margin="9dp"-->
+<!--                android:adjustViewBounds="true"-->
+<!--                android:background="@drawable/circle"-->
+<!--                android:padding="3dp"-->
+<!--                android:scaleType="centerInside"-->
+<!--                 />-->
+            <com.mikhaellopez.circularimageview.CircularImageView
+                android:id="@+id/foto"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
-                android:layout_margin="9dp"
-                android:adjustViewBounds="true"
-                android:background="@drawable/circle"
-                android:padding="3dp"
-                android:scaleType="centerInside"
-                 />
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                app:civ_border_color="@color/colorAccent"
+                app:civ_border_width="6dp"
+                app:civ_shadow="true"
+                app:civ_shadow_color="#8BC34A"
+                app:civ_shadow_radius="10"
+                />
 
         </RelativeLayout>
 
@@ -333,14 +345,6 @@
                     android:layout_marginRight="10dp"
                     android:background="@drawable/custombutton"
                     android:text="Daftar" />
-
-                <Button
-                style="@style/loginButton"
-                android:id="@+id/logout"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/custombutton"
-                android:text="Logout" />
 
             </LinearLayout>
 
