--- a/NurseryPolije/app/src/main/res/layout/activity_lupa_password.xml
+++ b/NurseryPolije/app/src/main/res/layout/activity_lupa_password.xml
@@ -46,9 +46,22 @@
 
                 <include layout="@layout/layout_lupass" />
 
+
             </LinearLayout>
         </RelativeLayout>
-
     </ScrollView>
+
+    <Button
+        android:id="@+id/Kemb"
+        style="@style/loginButton"
+        android:layout_width="124dp"
+        android:layout_height="36dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginRight="26dp"
+        android:layout_marginBottom="40dp"
+        android:background="@drawable/kembali"
+        android:text="Kembali" />
+
 
 </RelativeLayout>
