--- a/NurseryPolije/app/src/main/res/layout/fragment_notifications.xml
+++ b/NurseryPolije/app/src/main/res/layout/fragment_notifications.xml
@@ -9,37 +9,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/grad"
-        android:paddingBottom="20dp"
+        android:paddingBottom="10dp"
         android:layout_marginBottom="20dp">
 
         <RelativeLayout
             android:id="@+id/imgUser"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginLeft="15dp"
             android:background="@drawable/circle_border">
 
-<!--            <ImageView-->
-<!--                android:layout_width="120dp"-->
-<!--                android:layout_height="120dp"-->
-<!--                android:layout_margin="9dp"-->
-<!--                android:adjustViewBounds="true"-->
-<!--                android:background="@drawable/circle"-->
-<!--                android:padding="3dp"-->
-<!--                android:scaleType="centerInside"-->
-<!--                 />-->
             <com.mikhaellopez.circularimageview.CircularImageView
                 android:id="@+id/foto"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                app:civ_border_color="@color/colorAccent"
-                app:civ_border_width="6dp"
-                app:civ_shadow="true"
-                app:civ_shadow_color="#8BC34A"
-                app:civ_shadow_radius="10"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
                 />
 
         </RelativeLayout>
@@ -48,26 +32,50 @@
             android:id="@+id/namaprofile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/imgUser"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="15sp"
-            android:fontFamily="sans-serif-light"
+            android:layout_alignStart="@+id/imgUser"
             android:text=""
+            android:layout_marginStart="65dp"
+            android:layout_marginTop="60dp"
+            android:fontFamily="sans-serif-light"
             android:textColor="@color/white"
-            android:textSize="32sp" />
+            android:textSize="22sp" />
 
 
         <TextView
             android:id="@+id/keterangan"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/namaprofile"
-            android:layout_centerHorizontal="true"
+            android:layout_alignStart="@+id/imgUser"
+            android:layout_marginStart="65dp"
+            android:layout_marginTop="90dp"
             android:fontFamily="sans-serif"
-            android:text="Bergabung sejak 04 April 2020"
             android:textAllCaps="true"
             android:textColor="@color/address"
             android:textSize="14sp" />
+
+        <Button
+            android:id="@+id/login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/keranjang"
+            android:layout_marginStart="150dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/btn_login_fragment"
+            android:textColor="#ffffff"
+            android:text="Login"
+            />
+
+        <Button
+            android:id="@+id/daftar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/keranjang"
+            android:layout_toRightOf="@+id/login"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/btn_login_fragment"
+            android:text="Daftar"
+            android:textColor="#ffffff"
+            />
 
         <ImageView
             android:id="@+id/keranjang"
@@ -328,23 +336,23 @@
                 android:gravity="center"
                 >
 
-                <Button
-                    android:id="@+id/login"
-                    style="@style/loginButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="10dp"
-                    android:background="@drawable/custombutton"
-                    android:text="login" />
+<!--                <Button-->
+<!--                    android:id="@+id/login"-->
+<!--                    style="@style/loginButton"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_marginRight="10dp"-->
+<!--                    android:background="@drawable/custombutton"-->
+<!--                    android:text="login" />-->
 
-                <Button
-                    style="@style/loginButton"
-                    android:id="@+id/daftar"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="10dp"
-                    android:background="@drawable/custombutton"
-                    android:text="Daftar" />
+<!--                <Button-->
+<!--                    style="@style/loginButton"-->
+<!--                    android:id="@+id/daftar"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_marginRight="10dp"-->
+<!--                    android:background="@drawable/custombutton"-->
+<!--                    android:text="Daftar" />-->
 
             </LinearLayout>
 
