ubah password di profiile

--- a/NurseryPolije/app/src/main/res/layout/activity_ubah_password.xml
+++ b/NurseryPolije/app/src/main/res/layout/activity_ubah_password.xml
@@ -30,7 +30,8 @@
         android:layout_gravity="center"
         android:text="UBAH PASSWORD"
         android:layout_marginTop="80dp"/>
+
     <include
-        layout="@layout/ubahpass"/>
+        layout="@layout/ubah_pass"/>
 
 </RelativeLayout>
