--- a/NurseryPolije/app/src/main/res/layout/ubahpass.xml
+++ b/NurseryPolije/app/src/main/res/layout/ubahpass.xml
@@ -66,4 +66,4 @@ android:layout_height="match_parent">
     tools:ignore="MissingConstraints"
     tools:layout_editor_absoluteX="104dp" />
 
-</>
+</androidx.constraintlayout.widget.ConstraintLayout>
