--- a/NurseryPolije/app/src/main/res/layout/fragment_home.xml
+++ b/NurseryPolije/app/src/main/res/layout/fragment_home.xml
@@ -122,8 +122,24 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/kategori"
-        android:layout_marginTop="2dp"
-        android:focusableInTouchMode="true">
+        android:layout_marginTop="10dp">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvBunga"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
+                tools:ignore="MissingConstraints"
+                tools:listitem="@layout/item_list_bunga"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 
     </ScrollView>
