--- a/NurseryPolije/app/src/main/res/values/colors.xml
+++ b/NurseryPolije/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="biru">#FF000000</color>
+    <color name="lowred">#ff7d7d</color>
 
     <!--colors for modern ui-->
     <color name="whiteTextColor">#fff</color>
