--- a/NurseryPolije/app/src/main/res/layout/fragment_home.xml
+++ b/NurseryPolije/app/src/main/res/layout/fragment_home.xml
@@ -127,10 +127,6 @@
         android:layout_marginTop="10dp"
         android:layout_marginBottom="50dp">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rvBunga"
                 android:layout_width="match_parent"
@@ -138,10 +134,9 @@
                 android:orientation="vertical"
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp"
-                tools:ignore="MissingConstraints"
+                app:layout_constraintBottom_toBottomOf="@id/kategori"
                 tools:listitem="@layout/item_list_bunga"/>
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 
